create paging util, spec util, change to user filter request instead of manual parametes